[fix] openapi docs
